// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > accessRequest > getAccessRequest > 200 > ok 1`] = `
{
  "accessRequest": {
    "example": "test",
  },
}
`;

exports[`routes > accessRequest > getAccessRequest > audit > expected call 1`] = `
{
  "example": "test",
}
`;
